--- a/index.html
+++ b/index.html
@@ -4,25 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <div class="header">
     <div class="container">
         <div class="header__inner">
             <div class="header__burger">
-                <div class="header__logo"></div>
-                <div class="header__nav"></div>
-                <div class="header__contact"></div>
+
+                <div class="header__logo" width="100px"><img src="images/svg/logo.svg" alt=""></div>
+
+                <div class="header__nav">
+                    <a href="">ГЛАВНАЯ</a>
+                    <a href="">ДОМА</a>
+                    <a href="">БАНИ</a>
+                </div>
+
+        <div class="header__contact">
+            <a href="">Санкт-Петербург: 8(812)603-72-22</a>
+            <a href="">Москва: 8(495)380-77-33</a>
         </div>
-        <div class="image">
+
+    </div>
+</div>
+</div>
+</div>
+      
+<div class="section"> 
             <h1>"ПЕСТОВСКИЙ ЛЕСОКОМБИНАТ"</h1>
             <h2>Стань частью нашей команды!</h2>
 
             <button>ОТПРАВИТЬ</button>
         </div>
 
-        </div>
-    </div>
-</div>
+
 </body>
 </html>
