--- a/index.html
+++ b/index.html
@@ -30,13 +30,18 @@
 </div>
 </div>
       
-<div class="section"> 
-            <h1>"ПЕСТОВСКИЙ ЛЕСОКОМБИНАТ"</h1>
-            <h2>Стань частью нашей команды!</h2>
+<div class="section">
+    <div class="section__heading"> 
+            <h1 style="font-size: 64px; font-weight: 700;">"ПЕСТОВСКИЙ ЛЕСОКОМБИНАТ"</h1>
+            <h2 style="font-size: 28px; font-weight: 700;">Стань частью нашей команды!</h2>
 
-            <button>ОТПРАВИТЬ</button>
+            <button class="section__btn" style="padding: 20px, 40px, 20px, 40px;  margin-top: 36px; margin-bottom: 105px;  font-size: 20px; font-weight: 700; color: white;">ОТПРАВИТЬ АНКЕТУ</button>
         </div>
+</div>
 
+<div class="">
+
+</div>
 
 </body>
 </html>
