--- a/index.html
+++ b/index.html
@@ -35,11 +35,28 @@
             <h1 style="font-size: 64px; font-weight: 700;">"ПЕСТОВСКИЙ ЛЕСОКОМБИНАТ"</h1>
             <h2 style="font-size: 28px; font-weight: 700;">Стань частью нашей команды!</h2>
 
-            <button class="section__btn" style="padding: 20px, 40px, 20px, 40px;  margin-top: 36px; margin-bottom: 105px;  font-size: 20px; font-weight: 700; color: white;">ОТПРАВИТЬ АНКЕТУ</button>
+            <button class="section__btn" style="padding: 20px, 40px, 20px, 40px;  margin-top: 36px; margin-bottom: 134px;  font-size: 20px; font-weight: 700; color: white;">ОТПРАВИТЬ АНКЕТУ</button>
         </div>
 </div>
 
-<div class="">
+<div class="section_company">
+    <div class="container">
+        <div class="section_company__inner">
+            <h1 style="text-align:center; padding-top: 70px; font-size: 28px; color: #999999; font-weight: 700; line-height: 64px;">О КОМПАНИИ</h1>
+            <div class="section_company__block">
+                <div class="section_company__status">
+                    <div style="display: flex; justify-content: center; align-items: center; width: 100px; height: 80px; background-color: hwb(0 0% 100% / 0.70)">2</div>
+                    <p style="text-align: center;">Города присутствия:
+                        <br>Санкт-Петербург и Москва
+                    </p>
+                    
+                </div>
+
+
+            </div>
+        </div>
+
+    </div>
 
 </div>
 
