--- a/index.html
+++ b/index.html
@@ -464,6 +464,24 @@
             
         </div>
     </div>
+    
+    <div class="section_footer" style="background-color: #111311;">
+        <div class="container">
+            <div class="section_footer__inner" style="display: flex;">
+                <div class="">
+                    <h1 style=" padding-top: 70px; font-size: 28px; color: #999999; font-weight: 700; line-height: 64px;">ПРЕИМУЩЕСТВА КОМПАНИИ</h1>
+                    <div style="margin-top: 70px; display: flex; justify-content: center; align-items: center; gap: 20px;">
+                        <a class="section_projects__item" href="#">БАНИ</a>
+                        <a class="section_projects__item" href="#">ДОМА</a>
+                    </div>
+                </div>
+                <div class="">
+                    <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A3df4d4835ca38391ae5fe692ce19d54c55905a7c2fd3f0687b3f0bbc02b17923&amp;width=500&amp;height=400&amp;lang=ru_RU&amp;scroll=true"></script>
+                </div>
+
+            </div>
+        </div>
+    </div>
 
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 <script src="js/app.js"></script>
