--- a/index.html
+++ b/index.html
@@ -474,7 +474,18 @@
                         <a class="section_projects__item" href="#">БАНИ</a>
                         <a class="section_projects__item" href="#">ДОМА</a>
                     </div>
+                    <div>
+                        <div style="display: flex;"><img src="images/svg/icon13.svg" alt=""><p>8 (812) 602-77-60</p></div>
+                        <div style="display: flex;"><img src="images/svg/icon14.svg" alt=""><p>info@pplk.ru</p></div>
+                        <div style="display: flex;"><img src="images/svg/icon15.svg" alt=""><p>ул. Заозёрная, д. 8 к. 2, офис 202 <br>(7 мин. пешком от метро Фрунзенская)</p></div>
+                    </div>
+                    <div style="display: flex; justify-content: space-between;">
+                        <img src="images/svg/icon16.svg" alt="">
+                        <img src="images/svg/icon17.svg" alt="">
+                        <img src="images/svg/icon18.svg" alt="">
+                    </div>
                 </div>
+
                 <div class="">
                     <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A3df4d4835ca38391ae5fe692ce19d54c55905a7c2fd3f0687b3f0bbc02b17923&amp;width=500&amp;height=400&amp;lang=ru_RU&amp;scroll=true"></script>
                 </div>
