--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 
                 <div class="header__logo" width="100px"><img src="images/svg/logo.svg" alt=""></div>
 
-                <div class="header__nav">
-                    <a href="">ГЛАВНАЯ</a>
-                    <a href="">ДОМА</a>
-                    <a href="">БАНИ</a>
+                <div class="header__nav" style="display: flex; gap: 33px; font-weight: 900; font-size: 12px;">
+                    <a href="" style="color: white;">ГЛАВНАЯ</a>
+                    <a href="" style="color: white;">ДОМА</a>
+                    <a href="" style="color: white;">БАНИ</a>
                 </div>
 
         <div class="header__contact">
@@ -96,7 +96,7 @@
 
 
 
-            <div class="section_job" style=" gap: 20px; align-items: center; margin-top: 45px;display: flex; justify-content: center; flex-direction: column;">
+            <div class="section_job" id="section_jobID" style=" gap: 20px; align-items: center; margin-top: 45px;display: flex; justify-content: center; flex-direction: column;">
                 <div class="section_job__post" style="padding: 30px 45px; display: flex; justify-content: space-between; align-items: center;">
 
                     
@@ -509,5 +509,6 @@
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 <script src="js/app.js"></script>
 <script src="js/swiper.js"></script>
+<script src="js/text.js"></script>
 </body>
 </html>
