--- a/index.html
+++ b/index.html
@@ -90,11 +90,11 @@
             <h1 style="text-align:center; padding-top: 70px; font-size: 28px; color: #999999; font-weight: 700; line-height: 64px;">ВЫБЕРИ ПОДРАЗДЕЛЕНИЕ:</h1>
             <div class="section_job_openings__info" >
                 <div class="section_job_openings__block" style="flex-wrap: wrap; margin-top: 45px; display: flex; justify-content: center; align-items: center; gap: 20px;">
-                    <a class="section_job_openings__link" href="#">СТРОИТЕЛЬНЫЙ ОТДЕЛ</a>
-                    <a class="section_job_openings__link" href="#">ОФИС</a>
-                    <a class="section_job_openings__link" href="#">ФИНАНСОВЫЙ ОТДЕЛ</a>
-                    <a class="section_job_openings__link" href="#">ОТДЕЛ ПРОДАЖ</a>
-                    <a class="section_job_openings__link" href="#">ВНЕШТАТНЫЙ СОТРУДНИК</a>
+                    <a class="section_job_openings__link" href="#" data-category="construction">СТРОИТЕЛЬНЫЙ ОТДЕЛ</a>
+                    <a class="section_job_openings__link" href="#" data-category="office">ОФИС</a>
+                    <a class="section_job_openings__link" href="#" data-category="finance">ФИНАНСОВЫЙ ОТДЕЛ</a>
+                    <a class="section_job_openings__link" href="#" data-category="sales">ОТДЕЛ ПРОДАЖ</a>
+                    <a class="section_job_openings__link" href="#" data-category="freelance">ВНЕШТАТНЫЙ СОТРУДНИК</a>
                 </div>
             </div>
 
