--- a/index.html
+++ b/index.html
@@ -517,8 +517,12 @@
         </div>
     </section>
 
+
+
+
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 <script src="js/app.js"></script>
+<script src="js/Click.js"></script>
 <script src="js/swiper.js"></script>
 <script src="js/text.js"></script>
 </body>
