--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
             </div>
 
 <div class="section_job__btn" style="display: flex; justify-content: center;">
-    <button class="section__btn" style="display: flex; justify-content: center; align-items: center; padding: 20px 40px 20px 40px;  margin-top: 45px;margin-bottom: 70px; font-size: 20px; font-weight: 700; color: white; width: 414px;">ОТКЛИКНУТЬСЯ НА ВАКАНСИЮ</button>
+    <button class="section__btn" id="openModal1" style="display: flex; justify-content: center; align-items: center; padding: 20px 40px 20px 40px;  margin-top: 45px;margin-bottom: 70px; font-size: 20px; font-weight: 700; color: white; width: 414px;">ОТКЛИКНУТЬСЯ НА ВАКАНСИЮ</button>
 </div>
 
 
@@ -516,6 +516,15 @@
 
         </div>
     </section>
+
+
+    <div id="modal1" class="modal">
+        <div class="modal-content">
+            <span class="close" data-modal="modal1">&times;</span>
+            <p>Это модальное окно.</p>
+        </div>
+    </div>
+
 
 
 
