--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
                         </ul>
                     </div>
                 </div>
-            <div class=""> <img src="/images/image1.png" alt=""></div>
+            <div class=""> <img src="images/image1.png" alt=""></div>
           </div>
             </div>
 
@@ -451,7 +451,7 @@
                             </ul>
                         </div>
                     </div>
-                <div class=""> <img src="/images/image1.png" alt=""></div>
+                <div class=""> <img src="images/image1.png" alt=""></div>
               </div>
                 </div>
           </div>
@@ -472,7 +472,7 @@
                             </ul>
                         </div>
                     </div>
-                <div class=""> <img src="/images/image1.png" alt=""></div>
+                <div class=""> <img src="images/image1.png" alt=""></div>
               </div>
                 </div>
           </div>
