--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 </div>
 </div>
       
-<div class="section">
+<div class="section" style="background: url(images/fon.png) no-repeat center center/cover;">
     <div class="section__heading"> 
             <h1 style="font-size: 64px; font-weight: 700; text-align: center;">"ПЕСТОВСКИЙ ЛЕСОКОМБИНАТ"</h1>
             <h2 style="font-size: 28px; font-weight: 700; text-align: center;">Стань частью нашей команды!</h2>
